testsuite/tests/typecheck/should_fail/T17566b.stderr

T17566b.hs:7:17: error: [GHC-17370]
    • Different names for the same type variable: ‘k1’ and ‘k2’
    • In the class declaration for ‘C’
